Trying to fix broken parallax stellar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,14 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
+#about:before{
+  position:fixed;
+  width:100%;
+  height:100%;
+  left:0;
+  top:0;
+  background:url('images/full_image.webp');
+}
 
 #about {
   background-color: transparent;
